[package]
name = "aptos-mempool"
description = "Aptos mempool for consuming incoming transactions"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
gaptos = { workspace = true }
aptos-consensus-types = { workspace = true }
txn_metrics = { workspace = true }
bcs = { workspace = true }
fail = { workspace = true }
futures = { workspace = true }
itertools = { workspace = true }
maplit = { workspace = true }
num_cpus = { workspace = true }
once_cell = { workspace = true }
proptest = { workspace = true, optional = true }
rand = { workspace = true }
rayon = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-stream = { workspace = true }
# api-types = { workspace = true }
block-buffer-manager = { workspace = true }
async-trait = { workspace = true }

[dev-dependencies]
gaptos = { workspace = true }
enum_dispatch = { workspace = true }
proptest = { workspace = true }

[features]
default = []
failpoints = ["fail/failpoints"]
fuzzing = ["proptest"]
consensus-only-perf-test = []
