[package]
name = "api-types"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
async-trait = { workspace = true }
futures = { workspace = true }
tokio = { workspace = true }
ruint = { workspace = true }
serde = { workspace = true }
rand = { workspace = true }
hex = "0.4.3"
aptos-crypto = { workspace = true }
