[package]
name = "api"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aptos-consensus = { workspace = true }
aptos-consensus-types = { workspace = true }
aptos-executor-types = { workspace = true, features = ["fuzzing"] }
aptos-config = { workspace = true }
aptos-crypto = { workspace = true }
aptos-mempool = { workspace = true }
aptos-mempool-notifications = { workspace = true }
aptos-logger = { workspace = true }
aptos-netcore = { workspace = true }
aptos-network = { workspace = true }
aptos-network-builder = { workspace = true }
aptos-network-discovery = { workspace = true }
aptos-event-notifications = { workspace = true }
aptos-types = { workspace = true }
aptos-storage-interface = { workspace = true }
aptos-runtimes = { workspace = true }
aptos-channels = { workspace = true }
aptos-peer-monitoring-service-types = { workspace = true }
aptos-secure-storage = { workspace = true }
aptos-consensus-notifications = { workspace = true }
aptos-time-service = { workspace = true }
aptos-infallible = { workspace = true }
aptos-schemadb = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
aptos-validator-transaction-pool = { workspace = true }
bcs = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
serde_yaml = { workspace = true }
async-trait = { workspace = true }
either = { workspace = true }
arc-swap = { workspace = true }
byteorder = { workspace = true }
rocksdb = { workspace = true }
itertools = { workspace = true }

