[package]
name = "api"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
aptos-build-info = { workspace = true }
aptos-consensus = { workspace = true }
aptos-consensus-types = { workspace = true }
aptos-crash-handler = { workspace = true }
aptos-executor-types = { workspace = true, features = ["fuzzing"] }
aptos-config = { workspace = true }
aptos-crypto = { workspace = true }
aptos-mempool = { workspace = true }
aptos-mempool-notifications = { workspace = true }
aptos-logger = { workspace = true }
aptos-netcore = { workspace = true }
aptos-network = { workspace = true }
aptos-network-builder = { workspace = true }
aptos-network-discovery = { workspace = true }
aptos-event-notifications = { workspace = true }
aptos-types = { workspace = true }
aptos-storage-interface = { workspace = true }
aptos-runtimes = { workspace = true }
aptos-channels = { workspace = true }
aptos-peer-monitoring-service-types = { workspace = true }
aptos-secure-storage = { workspace = true }
aptos-consensus-notifications = { workspace = true }
aptos-telemetry = { workspace = true }
aptos-time-service = { workspace = true }
aptos-infallible = { workspace = true }
aptos-inspection-service = { workspace = true }
aptos-schemadb = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
aptos-validator-transaction-pool = { workspace = true }
bcs = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
serde_yaml = { workspace = true }
async-trait = { workspace = true }
either = { workspace = true }
arc-swap = { workspace = true }
byteorder = { workspace = true }
rocksdb = { workspace = true }
itertools = { workspace = true }
api-types = { workspace = true }
fail = { workspace = true }
axum="0.7.9"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio-rustls = "0.24"
rustls = "0.23.19"
rustls-pemfile = "1.0"
rcgen = "0.9"
tokio-test = "*"
reqwest = { version = "0.12.9", features = ["rustls-tls", "json"] }
coex-bridge = { path = "../coex-bridge" }

[features]
default = []
failpoints = ["fail/failpoints", "aptos-consensus/failpoints", "aptos-mempool/failpoints", "aptos-config/failpoints"]