[package]
name = "api"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
gaptos = { workspace = true }
aptos-consensus = { workspace = true }
aptos-consensus-types = { workspace = true }
aptos-mempool = { workspace = true }

serde = { workspace = true }
tokio = { workspace = true }
futures = { workspace = true }
bcs = { workspace = true }
anyhow = { workspace = true }
clap = { workspace = true }
lazy_static = { workspace = true }
rand = { workspace = true }
hex = { workspace = true }
serde_yaml = { workspace = true }
async-trait = { workspace = true }
either = { workspace = true }
arc-swap = { workspace = true }
byteorder = { workspace = true }
rocksdb = { workspace = true }
itertools = { workspace = true }
# api-types = { workspace = true }
fail = { workspace = true }
axum="0.7.9"
axum-server = { version = "0.7", features = ["tls-rustls"] }
tokio-rustls = "0.24"
rustls = "0.23.19"
rustls-pemfile = "1.0"
rcgen = "0.9"
tokio-test = "*"
reqwest = { version = "0.12.9", features = ["rustls-tls", "json"] }
tikv-jemallocator.workspace = true
tikv-jemalloc-ctl.workspace = true
tikv-jemalloc-sys.workspace = true
once_cell = { workspace = true }
block-buffer-manager = { workspace = true }
build-info = { workspace = true }
bytes = { workspace = true }

[features]
default = []
failpoints = ["fail/failpoints", "aptos-consensus/failpoints", "aptos-mempool/failpoints"]
jemalloc-profiling = ["tikv-jemallocator/profiling", "tikv-jemalloc-sys/profiling"]