[package]
name = "block-buffer-manager"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
# api-types.workspace = true
gaptos = { workspace = true }
anyhow.workspace = true
tokio.workspace = true
itertools = "0.14"
