[package]
name = "coex-bridge"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
gaptos = { workspace = true }
lazy_static.workspace =  true
api-types.workspace = true
once_cell = "1.20.2"
futures = { workspace = true }
async-trait.workspace = true