[package]
name = "gravity-sdk"
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }
resolver = "2"

[dependencies]
api.workspace = true
block-buffer-manager.workspace = true
gaptos.workspace = true