[package]
name = "aptos-rest-client"
description = "Aptos REST client"
version = "0.0.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[features]
default = ["dpn"]
dpn = []

[dependencies]
reqwest = { workspace = true }
url = { workspace = true }
thiserror ={ workspace = true }
serde = { workspace = true }
move-core-types ={ workspace = true }

[dev-dependencies]
