[package]
name = "gravity-reth"
version = "0.1.0"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license.workspace = true
publish.workspace = true
repository.workspace = true
rust-version.workspace = true

[dependencies]
futures-util = "0.3.30"
clap = { version = "4.5.17", features = ["derive", "env"] }
futures = "0.3.30"
dirs = "5.0.1"
tokio = "1.40.0"
tokio-stream = "0.1.16"

reth-node-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-node-builder" }
reth-node-ethereum = { git = "https://github.com/paradigmxyz/reth", package = "reth-node-ethereum" }
reth-node-core = { git = "https://github.com/paradigmxyz/reth", package = "reth-node-core" }
reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider" }
reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db" }
reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks" }
reth-cli-runner = { git = "https://github.com/paradigmxyz/reth", package = "reth-cli-runner" }
reth-cli = { git = "https://github.com/paradigmxyz/reth", package = "reth-cli" }
reth-cli-util = { git = "https://github.com/paradigmxyz/reth", package = "reth-cli-util" }
reth-chainspec = { git = "https://github.com/paradigmxyz/reth", package = "reth-chainspec" }
reth-tracing = { git = "https://github.com/paradigmxyz/reth", package = "reth-tracing" }
reth-auto-seal-consensus = { git = "https://github.com/paradigmxyz/reth", package = "reth-auto-seal-consensus" }
reth-basic-payload-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-basic-payload-builder" }
reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", package = "reth-beacon-consensus" }
reth-ethereum-engine-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-ethereum-engine-primitives" }
reth-evm-ethereum = { git = "https://github.com/paradigmxyz/reth", package = "reth-evm-ethereum" }
reth-network = { git = "https://github.com/paradigmxyz/reth", package = "reth-network" }
reth-node-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-node-api" }
reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-payload-builder" }
reth-rpc = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc" }
reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api" }
reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-types" }
reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", package = "reth-transaction-pool" }
reth-consensus = { git = "https://github.com/paradigmxyz/reth", package = "reth-consensus" }
reth-ethereum-payload-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-ethereum-payload-builder" }
reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives" }
eyre = "0.6.12"
tracing = "0.1.40"
tempfile = "3.12.0"
gravity-sdk = { path = "../../" }
jsonrpsee = "=0.24.4"
hex = "0.4.3"
serde_json = "1.0.128"
time = "0.3.36"
anyhow = "1.0.87"
alloy = {version =  "0.3.6", features = ["eip712", "consensus", "rlp", "eips"] }


[dependencies.reth-cli-commands]
git = "https://github.com/paradigmxyz/reth"
package = "reth-cli-commands"
features = ["dev"]

