[package]
name = "aptos-safety-rules"
description = "Aptos safety rules"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
gaptos = { workspace = true }
aptos-consensus-types = { workspace = true }
hex = { workspace = true }
once_cell = { workspace = true }
proptest = { workspace = true, optional = true }
rand = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
claims = { workspace = true }
criterion = { workspace = true }
proptest = { workspace = true }
rusty-fork = { workspace = true }
tempfile = { workspace = true }

[[bench]]
name = "safety_rules"
harness = false
required-features = ["testing"]

[features]
default = []
fuzzing = ["aptos-consensus-types/fuzzing", "proptest"]
