[package]
name = "aptos-network-builder"
description = "Aptos network builder for constructing a network"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
aptos-netcore = { workspace = true }
aptos-network = { workspace = true }
gaptos = { workspace = true }
aptos-network-discovery = { workspace = true }
bcs = { workspace = true }
futures = { workspace = true }
maplit = { workspace = true }
rand = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }
