[package]
name = "aptos-network-discovery"
description = "Aptos Network Peer Discovery"
version = "0.1.0"

# Workspace inherited keys
authors = { workspace = true }
edition = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
publish = { workspace = true }
repository = { workspace = true }
rust-version = { workspace = true }

[dependencies]
anyhow = { workspace = true }
aptos-network = { workspace = true }
gaptos = { workspace = true }
bcs = { workspace = true }
futures = { workspace = true }
once_cell = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
url = { workspace = true }

[dev-dependencies]
aptos-netcore = { workspace = true, features = ["fuzzing"] }

rand = { workspace = true }
